# pj03

./: .gitignore  1_0_huggingface.ipynb  1_1_object_detection_yolo.ipynb  1_2_segmentaion.ipynb  1_3_clip.ipynb  1_4_ocr.ipynb  1_5_1_basic_opencv.ipynb  1_5_2_video_opencv.py  1_5_3_mediapipe_hands.py  1_5_4_mediapipe_face.py  1_5_8_mediapipe_train.ipynb  1_7_STT_TTS_test.ipynb  1_7_stt_tts.ipynb  1_8_ollama_api.ipynb  README.md  main.py  pyproject.toml  이나원_test_mediapipe.py
llm_project/: main.py
llm_project/pages/: chatbot_api.py
project_server/: main.py  request_test.ipynb
vision_project/: main.py
vision_project/pages/: 01_object_detection.py  02_segmentation.py  03_clip.py  test.py
